--- a/SmartBar_r1/app/src/main/res/layout/activity_login.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_login.xml
@@ -27,8 +27,7 @@
             android:textStyle="bold"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="25sp"
-            android:typeface="serif" />
+            android:textSize="25sp" />
 
         <View
             android:id="@+id/bar_separator"
