--- a/SmartBar_r1/app/src/main/res/menu/menu_drink_ordered.xml
+++ b/SmartBar_r1/app/src/main/res/menu/menu_drink_ordered.xml
@@ -14,4 +14,9 @@
         android:title="@string/action_logout"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_pin"
+        android:title="@string/action_pin"
+        app:showAsAction="never" />
+
 </menu>
