--- a/SmartBar_r1/app/src/main/res/layout/activity_login.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_login.xml
@@ -1,19 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/login_welcome_back"
@@ -25,7 +17,6 @@
             android:paddingRight="20dp"
             android:text="@string/welcome_back"
             android:textStyle="bold"
-            android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="25sp" />
 
@@ -78,9 +69,6 @@
             android:text="@string/login_button"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:onClick="checkLogin"
             />
 
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
