--- a/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -136,9 +136,8 @@
             android:text="@string/verify_button"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:onClick="checkUserLogin"
             />
 
     </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
