--- a/SmartBar_r1/app/src/main/res/menu/menu_login.xml
+++ b/SmartBar_r1/app/src/main/res/menu/menu_login.xml
@@ -1,7 +1,16 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.lamperry.smartbar_r1.LoginActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    tools:context=".LoginActivity">
+
+    <item
+        android:id="@+id/action_forgot_user"
+        android:title="@string/action_forgot_user"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_forgot_pass"
+        android:title="@string/action_forgot_pass"
+        app:showAsAction="never" />
 </menu>
