--- a/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
@@ -118,9 +118,8 @@
             android:layout_marginTop="10dp"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <EditText
+        <Spinner
             android:id="@+id/type_sex"
-            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
