--- a/SmartBar_r1/app/src/main/res/menu/menu_welcome.xml
+++ b/SmartBar_r1/app/src/main/res/menu/menu_welcome.xml
@@ -5,8 +5,8 @@
     tools:context="com.example.lamperry.smartbar_r1.WelcomeActivity">
 
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:id="@+id/action_pin"
+        android:title="@string/action_pin"
         app:showAsAction="never" />
 
     <item
