--- a/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
@@ -13,14 +13,14 @@
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="250dp">
 
 
         <TextView android:text="Is This Your Order?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:layout_row="0"
             android:layout_column="0"
             android:layout_columnWeight="1"/>
@@ -29,20 +29,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:layout_row="18"
             android:layout_column="2"
             />
         <TextView android:text="Whiskey:    Single"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="30sp"
             android:layout_row="19"
             android:layout_column="2"
             />
         <TextView android:text="Lemon:      Single"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="30sp"
             android:layout_row="20"
+            android:layout_column="2"
+            />
+
+        <TextView android:text="S.Syrup:     Single"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:layout_row="21"
             android:layout_column="2"
             />
 
@@ -54,7 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Yes"
             android:id="@+id/button11"
-            android:layout_row="59"
+            android:layout_row="20"
             android:layout_column="0"
             />
 
@@ -63,14 +73,15 @@
             android:layout_height="wrap_content"
             android:text="No"
             android:id="@+id/button10"
-            android:layout_row="60"
+            android:layout_row="21"
             android:layout_column="0"
             />
     </GridLayout>
 
     <ImageView
         android:layout_width="280dp"
-        android:layout_height="341dp"
+        android:layout_height="330dp"
+        android:background="#00000000"
         android:id="@+id/imageView"
         android:src="@drawable/whiskeysour"
         android:layout_row="60"
