--- a/UI_Code/app/src/main/res/layout/activity_main.xml
+++ b/UI_Code/app/src/main/res/layout/activity_main.xml
@@ -52,25 +52,25 @@
 
 
 <GridLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/button5">
-     <EditText
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:id="@+id/editText"
-         android:width="200dp"
-         android:layout_column="0"
-         android:layout_columnSpan="2"
-         android:layout_row="0" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send"
-        android:id="@+id/button2"
-        android:onClick="SendCustomText"
-        android:layout_column="2"
-        android:layout_row="0" />
+    android:id="@+id/grid_layout1">
+         <EditText
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:id="@+id/editText"
+             android:width="200dp"
+             android:layout_column="0"
+             android:layout_columnSpan="2"
+             android:layout_row="0" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send"
+            android:id="@+id/button2"
+            android:onClick="SendCustomText"
+            android:layout_column="2"
+            android:layout_row="0" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -92,6 +92,17 @@
             android:layout_row="1"
             android:layout_rowSpan="6"
             android:layout_column="3" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Analog In Value"
+            android:id="@+id/textView"
+            android:layout_row="0"
+            android:layout_column="8"
+            android:enabled="false"
+            android:textColor="#ffff0000" />
 
         <ToggleButton
             android:layout_width="wrap_content"
@@ -119,6 +130,16 @@
              android:id="@+id/toggleButton3" />
 
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear Window"
+        android:onClick="ClearWindow"
+        android:id="@+id/button5"
+        android:layout_row="3"
+        android:layout_column="4" />
+
     <ToggleButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
@@ -139,13 +160,13 @@
         android:layout_column="4" />
 
     <ToggleButton
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="New ToggleButton"
-             android:layout_column="0"
-             android:onClick="sendMessage"
-             android:layout_row="5"
-             android:id="@+id/toggleButton5"/>
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:text="New ToggleButton"
+         android:layout_column="0"
+         android:onClick="sendMessage"
+         android:layout_row="5"
+         android:id="@+id/toggleButton5"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -219,6 +240,16 @@
         android:textSize="30dp"
         android:layout_row="6"
         android:layout_column="1"
+        />
+
+    <SeekBar
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:max="1024"
+        android:id="@+id/seekBar"
+        android:layout_row="1"
+        android:layout_columnSpan="4"
+        android:layout_column="5"
         />
 
 </GridLayout>
