--- a/UI_Code/app/src/main/res/layout/activity_pick_up_finger.xml
+++ b/UI_Code/app/src/main/res/layout/activity_pick_up_finger.xml
@@ -26,10 +26,25 @@
 
 
 
-    <!--
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_height="wrap_content">
+
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:src="@drawable/finger"/> -->
+        android:id="@+id/fingerImg"
+        android:src="@drawable/science_fingerprint"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginStart="500dp"
+        android:layout_marginTop="200dp"
+        android:text="Skip"
+        android:onClick="SkipFingerPrint"
+        android:id="@+id/skipPrint" />
+</LinearLayout>
 
 </LinearLayout>
