--- a/UI_Code/app/src/main/res/xml/accessory_filter.xml
+++ b/UI_Code/app/src/main/res/xml/accessory_filter.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <usb-accessory model="PyAndroidAccessory" manufacturer="_ArnO_" version="0.1.0"/>
+    <usb-accessory model="PiAccessory" manufacturer="SmartBar" version="0.2.0"/>
 </resources>
