--- a/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:singleLine="true"
             android:hint="@string/drink_hint"
             />
 
