--- a/SmartBar_r1/app/src/main/res/layout/activity_login.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
             android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:layout_marginTop="20dp"
             android:hint="@string/email_hint"
             />
@@ -57,6 +58,7 @@
             android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:layout_marginTop="20dp"
             android:hint="@string/enter_password"
             />
