--- a/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
@@ -56,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
             android:hint="@string/email_hint"
             />
 
@@ -73,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
             android:hint="@string/enter_password"
             />
 
@@ -90,6 +92,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
             android:hint="@string/enter_age"
             />
 
@@ -107,6 +110,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:singleLine="true"
             android:hint="@string/enter_weight"
             />
 
