--- a/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
@@ -1,19 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
+    android:id="@+id/library_browse_activity"
     tools:context=".LibraryBrowseActivity">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/enter_drink"
@@ -62,6 +55,4 @@
             android:onClick="libraryBrowseToConfirmation"
             />
 
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
