--- a/SmartBar_r1/app/src/main/res/layout/activity_login.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:orientation="vertical"
+    android:id="@+id/login_activity"
     tools:context=".LoginActivity">
 
         <TextView
