--- a/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_new_user.xml
@@ -4,15 +4,12 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:id="@+id/new_user_activity"
     tools:context=".NewUserActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
         <TextView
