--- a/UI_Code/app/src/main/res/layout/activity_idle_menu.xml
+++ b/UI_Code/app/src/main/res/layout/activity_idle_menu.xml
@@ -33,7 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="150sp"
-        android:textColor="#88ffffff"
+        android:textStyle="bold"
+        android:textColor="#ffffffff"
         android:id="@+id/textClock"
         android:layout_gravity="center_horizontal" />
 
@@ -41,11 +42,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:textSize = "30sp"
-        android:background="#44ffffff"
+
         android:padding="10dp"
-        android:textColor="@color/black"
-        android:text="Pickup Drink"
+
+        android:background="@drawable/cust_butt"
+        style="@style/CityTheme"
+
+        android:text="Pickup Drink >"
         android:onClick="onPickUpClick"
         android:id="@+id/button8"
         android:layout_gravity="center_horizontal"/>
@@ -53,12 +56,13 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:text="New User?      >"
         android:layout_marginTop="25dp"
         android:padding="10dp"
-        android:background="#44ffffff"
-        android:textColor="@color/black"
-        android:text="New User?"
+
+        android:background="@drawable/cust_butt"
+        style="@style/CityTheme"
+
         android:onClick="GoToNewUser"
         android:id="@+id/button7"
         android:layout_gravity="center_horizontal"/>
