--- a/UI_Code/app/src/main/res/values/color.xml
+++ b/UI_Code/app/src/main/res/values/color.xml
@@ -5,6 +5,9 @@
     <color name="white">#ffffffff</color>
     <color name="black">#ff000000</color>
     <color name="SmartBarTextColor">#ffffffff</color>
+    <color name="DullRed">#ffcb2c21</color>
     <color name="Bronze">#CD7F32</color>
+    <color name="CrazyDiamond">#FF024558</color>
+    <color name="DarkLeaves">#FF233642</color>
     <color name="textBoxColor">#ffb3b3ae</color>
 </resources>
