--- a/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
@@ -56,9 +56,6 @@
             android:layout_column="2"
             />
 
-
-
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,6 +63,7 @@
             android:id="@+id/button11"
             android:layout_row="20"
             android:layout_column="0"
+            android:onClick="PourDrink"
             />
 
         <Button
