--- a/UI_Code/app/src/main/res/layout/activity_test.xml
+++ b/UI_Code/app/src/main/res/layout/activity_test.xml
@@ -4,7 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.trider.pyandroidaccessory.TestActivity">
+
+    android:background="@color/DullRed"
+    tools:context="com.example.trider.smartbarui.TestActivity">
 
     <TextView
         android:text="@string/hello_world"
@@ -13,16 +15,28 @@
         android:layout_height="wrap_content" />
 
     <Button
-        style="?android:attr/buttonStyleSmall"
+        style="@style/CityTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start UI"
+        android:text="Start Smart Bar UI  >"
+        android:padding="10dp"
+        android:background="@drawable/cust_butt"
         android:onClick="StartUIClicked"
         android:id="@+id/button3"
-        android:layout_below="@+id/testView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="87dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"/>
+
+    <Button
+        style="@style/CityTheme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="System Status           >"
+        android:padding="10dp"
+        android:background="@drawable/cust_butt"
+        android:onClick="SystemStatusClicked"
+        android:id="@+id/button4"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="300dp"/>
 
 
 </RelativeLayout>
