--- a/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_library_browse.xml
@@ -24,23 +24,21 @@
             android:layout_marginBottom="10dp"
             android:background="#C0C0C0"/>
 
+        <ListView
+            android:id="@+id/drinkList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="20dp">
+        </ListView>
+
         <EditText
             android:id="@+id/typeDrink"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:singleLine="true"
-            android:hint="@string/drink_hint"
-            />
-
-        <ListView
-            android:id="@+id/drinkList"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="20dp"
-            >
-        </ListView>
+            android:hint="@string/drink_hint" />
 
         <Button
             android:id="@+id/order_button"
