--- a/SmartBar_r1/app/src/main/res/layout/activity_startup.xml
+++ b/SmartBar_r1/app/src/main/res/layout/activity_startup.xml
@@ -32,8 +32,7 @@
         android:text="@string/login_button"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:onClick="startupToLogin"
-        />
+        android:onClick="startupToLogin" />
 
     <Button
         android:id="@+id/newUserButton"
@@ -43,7 +42,6 @@
         android:text="@string/new_user_button"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:onClick="startupToNewUser"
-        />
+        android:onClick="startupToNewUser" />
 
 </LinearLayout>
