--- a/UI_Code/app/src/main/res/layout/activity_system_status.xml
+++ b/UI_Code/app/src/main/res/layout/activity_system_status.xml
@@ -1,20 +1,20 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/system_view"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/DullRed"
     tools:context="com.example.trider.smartbarui.SystemStatus">
 
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+    <LinearLayout
+        android:layout_width="500dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/fullscreen_content"
@@ -23,40 +23,58 @@
         android:keepScreenOn="true"
         style="@style/CityTheme"
         android:gravity="center"
-        android:layout_columnSpan="20"
         android:text="System Status"
-        android:layout_row="0"
-        android:layout_column="0" />
+        />
 
-        <SeekBar
+
+
+
+
+    <SeekBar
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar2"
+        android:paddingStart="5dp"
+        android:layout_marginTop="100dp"
+         />
+
+    <SeekBar
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar3"
+        android:paddingStart="5dp"
+        android:layout_marginTop="100dp"
+         />
+
+    <SeekBar
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar4"
+        android:paddingStart = "5dp"
+        android:layout_marginTop="100dp"
+         />
+
+
+    </LinearLayout>
+    <ScrollView
+        android:layout_width="400dp"
+        android:layout_height="match_parent"
+        android:paddingBottom="50dp"
+        android:id="@+id/scrollView" >
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar2"
-
-            android:rotation="90"
-            android:layout_marginBottom="100dp"
-            android:layout_row="3"
-            android:layout_rowSpan="6"
-            android:layout_column="1" />
-
-        <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/seekBar3"
-            android:rotation="90"
-            android:layout_row="3"
-            android:layout_rowSpan="6"
-            android:layout_column="2" />
-
-        <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/seekBar4"
-            android:rotation="90"
-            android:layout_row="3"
-            android:layout_rowSpan="6"
-            android:layout_column="3" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/Ishmael"
+            android:id="@+id/textView5" />
+    </ScrollView>
 
 
-    </GridLayout>
-</FrameLayout>
+
+
+
+
+
+
+</LinearLayout>
