--- a/UI_Code/app/src/main/res/layout/activity_new_user.xml
+++ b/UI_Code/app/src/main/res/layout/activity_new_user.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:textColor="@color/white"
-    android:background="@drawable/smart_bar_background"
+    android:background="@color/DullRed"
     android:orientation="vertical"
     tools:context="com.example.trider.smartbarui.NewUser"
     android:weightSum="1">
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Welcome, Please Enter Your 11-Digit Phone Number"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="30dp"
         android:id="@+id/textView4"
         />
@@ -27,7 +27,7 @@
         android:layout_width="400dp"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Drink Order:\n"
+        android:text=""
         android:id="@+id/drinkView" />
 
     <ProgressBar
@@ -41,20 +41,25 @@
         android:layout_width="300dp"
         android:layout_marginLeft="300dp"
         android:layout_height="wrap_content"
+
         android:hint="Phone Number"
-        android:textSize="40dp"
-        android:inputType="number"
-        android:maxLength="11">
+        android:inputType="phone"
+        android:maxLength="11"
+
+        android:textSize="40sp"
+        android:textColor="@color/white">
         <requestFocus/>
     </EditText>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/CityTheme"
+        android:background="@drawable/cust_butt"
         android:layout_marginLeft="300dp"
         android:hint="Password"
         android:text="Enter"
-        android:textSize="40dp"
+
         android:id="@+id/button9"
         android:onClick="CheckPin"/>
 
