--- a/UI_Code/app/src/main/res/layout/activity_register_finger_print.xml
+++ b/UI_Code/app/src/main/res/layout/activity_register_finger_print.xml
@@ -4,12 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/smart_bar_background"
+    android:background="@color/DullRed"
     android:orientation="vertical"
     tools:context="com.example.trider.smartbarui.RegisterFingerPrint">
 
     <TextView android:text="@string/register_finger_print_prompt"
         android:textSize = "50sp"
+        android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
