--- a/UI_Code/app/src/main/res/layout/activity_system_status.xml
+++ b/UI_Code/app/src/main/res/layout/activity_system_status.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:id="@+id/system_view"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -13,66 +12,77 @@
 
     <LinearLayout
         android:layout_width="500dp"
+        android:paddingStart="25dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/fullscreen_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:keepScreenOn="true"
-        style="@style/CityTheme"
-        android:gravity="center"
-        android:text="System Status"
-        />
+        <TextView
+            android:id="@+id/fullscreen_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:keepScreenOn="true"
+            style="@style/CityTheme"
+            android:gravity="center"
+            android:text="System Status"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+                <Spinner
+                    android:layout_width="200dp"
+                    android:background="#88FFFFFF"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/command_spinner"
+                    android:drawSelectorOnTop="true"
 
+                    android:prompt="@string/command_list"
+                    android:entries="@array/spinnerItems" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Send"
+                    android:onClick="SendCommand"
+                    android:id="@+id/button18"
+                    android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+        <SeekBar
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar2"
+            android:paddingStart="10dp"
+            android:layout_marginTop="100dp"/>
 
+        <SeekBar
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar3"
+            android:paddingStart="10dp"
+            android:layout_marginTop="100dp"/>
 
-
-
-    <SeekBar
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar2"
-        android:paddingStart="5dp"
-        android:layout_marginTop="100dp"
-         />
-
-    <SeekBar
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar3"
-        android:paddingStart="5dp"
-        android:layout_marginTop="100dp"
-         />
-
-    <SeekBar
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar4"
-        android:paddingStart = "5dp"
-        android:layout_marginTop="100dp"
-         />
+        <SeekBar
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar4"
+            android:paddingStart = "10dp"
+            android:layout_marginTop="100dp"/>
 
 
     </LinearLayout>
     <ScrollView
         android:layout_width="400dp"
         android:layout_height="match_parent"
-        android:paddingBottom="50dp"
+        android:paddingBottom="0dp"
+        android:background="@drawable/back"
         android:id="@+id/scrollView" >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/Ishmael"
-            android:id="@+id/textView5" />
+            android:id="@+id/status_log" />
     </ScrollView>
-
-
-
-
 
 
 
