--- a/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
@@ -52,6 +52,7 @@
             android:id="@+id/button10"
             android:layout_row="21"
             android:layout_column="0"
+            android:onClick="No"
             />
     </GridLayout>
 
