--- a/UI_Code/app/src/main/res/layout/activity_idle_menu.xml
+++ b/UI_Code/app/src/main/res/layout/activity_idle_menu.xml
@@ -14,8 +14,8 @@
     android:background="#aa818583"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingTop="0dp"
+    android:paddingBottom="0dp"
     android:orientation="vertical"
     >
     <ImageView
@@ -39,31 +39,41 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
+        android:layout_gravity="center_horizontal"
         android:padding="10dp"
+
         android:background="@drawable/cust_butt"
         style="@style/CityTheme"
 
-        android:text="Pickup Drink                     >"
+        android:text="Pickup Drink                       >"
         android:onClick="onPickUpClick"
-        android:id="@+id/button8"
-        android:layout_gravity="center_horizontal"/>
+        android:id="@+id/button8"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register Finger Print >"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:padding="10dp"
+
         android:background="@drawable/cust_butt"
         style="@style/CityTheme"
+
+        android:text="Register Finger Print   >"
         android:onClick="GoToNewUser"
-        android:id="@+id/button7"
-        android:layout_gravity="center_horizontal"/>
+        android:id="@+id/button7" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:padding="10dp"
+
+        android:background="@drawable/cust_butt"
+        style="@style/CityTheme"
+
+        android:text="Current Drink Queue    >"
         android:onClick="GetQueue"
         android:id="@+id/button19" />
 
