--- a/UI_Code/app/src/main/res/layout/activity_main.xml
+++ b/UI_Code/app/src/main/res/layout/activity_main.xml
@@ -50,8 +50,7 @@
         android:text="Send Messages"  />
 
 
-
-<GridLayout
+    <GridLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/grid_layout1">
@@ -120,7 +119,18 @@
             android:layout_column="0"
             android:layout_row="2"
             android:id="@+id/toggleButton2" />
-         <ToggleButton
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stock Inventory  "
+            android:id="@+id/button21"
+            android:onClick="tryParse"
+            android:layout_gravity="center_horizontal"
+            android:layout_row="2"
+            android:layout_column="4" />
+
+        <ToggleButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="New ToggleButton"
