--- a/UI_Code/app/src/main/res/values/styles.xml
+++ b/UI_Code/app/src/main/res/values/styles.xml
@@ -28,6 +28,14 @@
         <item name="android:background">@android:drawable/bottom_bar</item>
     </style>
 
+    <style name="SmartUIDialog" >
+        <item name="android:textColor">#ff000000</item>
+        <item name="android:textSize">25sp</item>
+    </style>
+
+
+
+
     <style name="ButtonBarButton" />
 
 </resources>
