--- a/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
@@ -25,14 +25,7 @@
             android:layout_column="0"
             android:layout_columnWeight="1"/>
 
-        <TextView android:text="WhiskeySour"
-            android:id="@+id/drink_listing"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_row="18"
-            android:layout_column="2"/>
+
 
 
         <Button
@@ -40,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="Yes"
             android:id="@+id/button11"
-            android:layout_row="20"
+            android:layout_row="19"
             android:layout_column="0"
             android:onClick="PourDrink"
             />
@@ -50,20 +43,32 @@
             android:layout_height="wrap_content"
             android:text="No"
             android:id="@+id/button10"
-            android:layout_row="21"
+            android:layout_row="20"
             android:layout_column="0"
             android:onClick="No"
             />
     </GridLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+    <TextView android:text="WhiskeySour"
+        android:id="@+id/drink_listing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        />
     <ImageView
         android:layout_width="280dp"
         android:layout_height="330dp"
         android:background="#00000000"
         android:id="@+id/imageView"
         android:src="@drawable/whiskeysour"
-        android:layout_row="60"
-        android:layout_column="0" />
+        android:layout_marginStart="200dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
 
