--- a/UI_Code/app/src/main/res/layout/activity_container__screen.xml
+++ b/UI_Code/app/src/main/res/layout/activity_container__screen.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="0dp"
     android:orientation="vertical"
+    android:background="@drawable/cityscape"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
         <HorizontalScrollView
@@ -24,197 +25,178 @@
             tools:context="com.example.trider.smartbarui.Container_Screen">
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
+
                 android:id="@+id/con1_button"
                 android:onClick="onContainerClick"
-                android:layout_margin="1dp"
+
                 android:text="Container One"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con2_button"
                 android:onClick="onContainerClick"
-                android:layout_margin="1dp"
-                android:padding="5dp"
+
                 android:text="Container Two"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con3_button"
-                android:padding="5dp"
                 android:onClick="onContainerClick"
-                android:layout_margin="1dp"
                 android:text="Container Three"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con4_button"
                 android:onClick="onContainerClick"
-                android:layout_margin="1dp"
+
                 android:text="Container Four"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con5_button"
                 android:onClick="onContainerClick"
                 android:text="Container Five"
-                android:layout_margin="1dp"
-                android:background="@drawable/cust_butt"/>
+
+               />
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con6_button"
-                android:layout_margin="1dp"
                 android:onClick="onContainerClick"
                 android:text="Container Six"
-
-                android:background="@drawable/cust_butt"/>
+              />
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con7_button"
-                android:layout_margin="1dp"
                 android:onClick="onContainerClick"
                 android:text="Container Seven"
-                android:background="@drawable/cust_butt"/>
+                />
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con8_button"
-                android:layout_margin="1dp"
                 android:onClick="onContainerClick"
                 android:text="Container Eight"
-                android:background="@drawable/cust_butt"/>
+              />
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con9_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Nine"
-                android:background="@drawable/cust_butt"/>
+              />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con10_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Ten"
                 android:layout_column="0"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+             />
 
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con11_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Eleven"
                 android:layout_column="1"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+               />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con12_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Twelve"
                 android:layout_column="2"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+              />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con13_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Thirteen"
                 android:layout_column="3"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+              />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con14_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Fourteen"
                 android:layout_column="4"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con15_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Fifteen"
                 android:layout_column="5"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con16_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Sixteen"
                 android:layout_column="6"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+               />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con17_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Seventeen"
                 android:layout_column="7"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+                />
             <Button
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                style="@style/Container"
                 android:id="@+id/con18_button"
-                android:layout_margin="1dp"
+
                 android:onClick="onContainerClick"
                 android:text="Container Eighteen"
                 android:layout_column="8"
                 android:layout_row="1"
-                android:background="@drawable/cust_butt"/>
+               />
 
             </GridLayout>
         </HorizontalScrollView>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Click Container for Info"
+        android:textColor="#ff000000"
+        android:background="#aaffffff"
         android:id="@+id/cont_tview"/>
 
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
+        android:textColor="#ff000000"
+        android:background="#aaffffff"
         android:orientation="horizontal">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Replace Container"
+            android:background="@drawable/cont_butt_high"
             android:onClick="ReplaceContainer"
             android:id="@+id/button22" />
 
@@ -228,7 +210,9 @@
             android:hint="Type"
             android:id="@+id/typeView"
             android:layout_row="1"
-            android:layout_column="0" />
+            android:layout_column="0"/>
+            <requestFocus/>
+
 
         <EditText
             android:layout_width="50dp"
@@ -259,6 +243,9 @@
             android:text="Send Inventory"
             android:onClick = "SendInventory"
             android:id="@+id/button23"
+            android:background="@drawable/cont_butt"
+            android:padding="5dp"
+            android:textColor="@color/white"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
