--- a/UI_Code/app/src/main/res/layout/activity_pick_up_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_pick_up_drink.xml
@@ -22,20 +22,147 @@
         android:textSize="30dp"
         android:id="@+id/textView4"
         />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginStart="200dp"
+    android:orientation="horizontal">
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            style="@style/PinKey"
+            android:text="1"
+            android:onClick="EnterPin"
+            android:id="@+id/keyOne"
+            android:layout_column="0"
+            android:layout_row="0"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:onClick="EnterPin"
+            android:layout_column="1"
+            android:layout_row="0"
+            android:text="2"
+            android:id="@+id/keyTwo"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:onClick="EnterPin"
+            android:id="@+id/keyThree"
+            android:text="3"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="4"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:onClick="EnterPin"
+            android:id="@+id/keyFour"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="5"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:onClick="EnterPin"
+            android:id="@+id/keyFive"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="6"
+            android:onClick="EnterPin"
+            android:layout_column="2"
+            android:layout_row="1"
+            android:id="@+id/keySix"
+            />
+        <Button
+            style="@style/PinKey"
+            android:text="7"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:onClick="EnterPin"
+            android:id="@+id/keySeven"
+            />
+        <Button
+            style="@style/PinKey"
+            android:text="8"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:onClick="EnterPin"
+            android:id="@+id/keyEight"
+            />
+        <Button
+            style="@style/PinKey"
+            android:text="9"
+            android:layout_column="2"
+            android:layout_row="2"
+            android:onClick="EnterPin"
+            android:id="@+id/keyNine"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="0"
+            android:onClick="EnterPin"
+            android:layout_column="1"
+            android:layout_row="3"
+            android:id="@+id/keyZero"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="Back"
+            android:onClick="EnterPin"
+            android:layout_column="0"
+            android:layout_row="3"
+            android:id="@+id/keyBack"
+            />
+
+        <Button
+            style="@style/PinKey"
+            android:text="Enter"
+            android:layout_column="2"
+            android:onClick="EnterPin"
+            android:layout_row="3"
+            android:id="@+id/keyEnter"
+            />
+    </GridLayout>
+
+
+
 
     <TextView
-        android:layout_width="400dp"
+        android:text=""
+        android:layout_width="200dp"
+        android:textSize="30sp"
         android:layout_height="50dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Drink Order:\n"
-        android:id="@+id/drinkView" />
+
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="100dp"
+        android:hint="Phone#"
+
+        android:background="@drawable/cust_butt"
+        android:id="@+id/enterField" />
+
+</LinearLayout>
 
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/findUserProgress"
-        android:layout_marginLeft="375dp" />
+        />
+       <!-- android:layout_marginLeft="375dp"-->
 
+<!--
     <EditText
         android:id="@+id/txtPin"
         android:layout_width="350dp"
@@ -47,6 +174,7 @@
         android:maxLength="11">
     </EditText>
 
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,7 +184,7 @@
         android:textSize="40dp"
         android:id="@+id/button9"
         android:onClick="CheckPin"/>
-
+-->
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -65,5 +193,6 @@
         android:onClick="SkipToPickFinger"
         android:id="@+id/button16"
         android:layout_gravity="right" />
+
 
 </LinearLayout>
