--- a/UI_Code/app/src/main/res/layout/activity_test.xml
+++ b/UI_Code/app/src/main/res/layout/activity_test.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
 
     android:background="@color/DullRed"
-    tools:context="com.example.trider.smartbarui.TestActivity">
+    tools:context="com.example.trider.smartbarui.MainMenu">
 
     <TextView
         android:text="@string/hello_world"
