--- a/UI_Code/app/src/main/res/values/styles.xml
+++ b/UI_Code/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -27,6 +27,32 @@
         <item name="android:paddingBottom">0dp</item>
         <item name="android:background">@android:drawable/bottom_bar</item>
     </style>
+
+    <style name="Container">
+        <item name ="android:layout_width">180dp</item>
+        <item name ="android:layout_height">180dp</item>
+        <item name = "android:layout_margin">1dp</item>
+        <item name ="android:textColor">@color/white</item>
+        <item name= "android:background">@drawable/con_butt_sel</item>
+    </style>
+
+
+    <style name= "PinKey">
+        <item name ="android:layout_width">70dp</item>
+        <item name ="android:layout_height">70dp</item>
+        <item name = "android:background">#8800FF00</item>
+
+    </style>
+
+
+    <style name="ContainerHighlighted">
+        <item name ="android:layout_width">180dp</item>
+        <item name ="android:layout_height">180dp</item>
+        <item name = "android:layout_margin">1dp</item>
+        <item name = "android:textColor">@color/black</item>
+        <item name = "android:background">@drawable/cont_butt_high</item>
+    </style>
+
 
     <style name="SmartUIDialog" >
         <item name="android:textColor">#ff000000</item>
