--- a/SmartBarMobile/bin/classes/layout/activity_welcome.xml
+++ b/SmartBarMobile/bin/classes/layout/activity_welcome.xml
@@ -37,20 +37,21 @@
             android:textSize="20sp"
             android:typeface="serif" />
 
-
-
         <Button
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/order_button"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:onClick="welcomeToLibraryBrowse"
-            />
+            android:onClick="welcomeToLibraryBrowse" />
+
+        <Button
+            android:id="@+id/bac_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/bac_button"
+            android:onClick="checkBAC" />
 
     </LinearLayout>
 
