--- a/SmartBarMobile/res/layout/activity_drink_ordered.xml
+++ b/SmartBarMobile/res/layout/activity_drink_ordered.xml
@@ -1,48 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context=".DrinkOrderedActivity">
+    android:orientation="vertical"
+    tools:context=".DrinkOrderedActivity" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical" >
+       <TextView
+           android:id="@+id/drink_sent"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:layout_gravity="center"
+           android:text="@string/drink_sent"
+           android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/drink_sent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            android:text="@string/drink_sent"
-            android:textSize="20sp" />
+       <TextView
+           android:id="@+id/displayPin"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="20dp"
+           android:layout_gravity="center"
+           android:textSize="40sp" />
 
-        <TextView
-            android:id="@+id/displayPin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            android:textSize="40sp" />
+       <Button
+           android:id="@+id/backToLibrary"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:text="@string/back_to_library_button"
+           android:paddingLeft="@dimen/activity_horizontal_margin"
+           android:paddingRight="@dimen/activity_horizontal_margin"
+           android:onClick="drinkOrderedToLibraryBrowse" />
 
-        <Button
-            android:id="@+id/backToLibrary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/back_to_library_button"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:onClick="drinkOrderedToLibraryBrowse"
-            />
+       <Button
+           android:id="@+id/bac_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:text="@string/bac_button"
+           android:onClick="checkBAC" />
 
-    </LinearLayout>
+       <Button
+           android:id="@+id/uber_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:text="@string/uber_button"
+           android:onClick="openUber" />
 
-</RelativeLayout>
+       <Button
+           android:id="@+id/lyft_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:text="@string/lyft_button"
+           android:onClick="openLyft" />
+
+   </LinearLayout>
+
