--- a/SmartBarMobile/res/menu/menu_drink_ordered.xml
+++ b/SmartBarMobile/res/menu/menu_drink_ordered.xml
@@ -7,8 +7,12 @@
         android:showAsAction="never" />
 
     <item
+        android:id="@+id/action_resetFP"
+        android:title="@string/action_resetFP"
+        android:showAsAction="never" />
+
+    <item
         android:id="@+id/action_logout"
         android:title="@string/action_logout"
         android:showAsAction="never" />
-
 </menu>
