--- a/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
+++ b/UI_Code/app/src/main/res/layout/activity_confirm_drink.xml
@@ -1,26 +1,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:style="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="horizontal"
+    android:orientation="vertical"
 
-    android:background="@drawable/san_fran_city_scape"
+    android:background="@drawable/smart_bar_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tylerrider.raspgui.ConfirmDrink">
 
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:orientation="vertical">
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="250dp">
 
 
         <TextView android:text="Is This Your Order?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="40sp"
             android:layout_row="0"
@@ -33,55 +31,44 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/PinKey"
             android:text="Yes"
             android:id="@+id/button11"
+            android:layout_row="19"
+            android:layout_column="0"
             android:onClick="PourDrink"
             />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/PinKey"
             android:text="No"
             android:id="@+id/button10"
-
+            android:layout_row="20"
+            android:layout_column="0"
             android:onClick="No"
             />
-    </LinearLayout>
+    </GridLayout>
 
     <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="300dp"
-        android:background="#22ffffff"
-        android:orientation="vertical"
-        >
-        <TextView android:text="WhiskeySour"
-            android:id="@+id/drink_listing"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            />
-        <ImageView
-            android:layout_width="280dp"
-            android:layout_height="330dp"
-            android:layout_margin="35dp"
-            android:background="#00000000"
-            android:id="@+id/imageView"
-            android:src="@drawable/whiskeysour"
-             />
-
-    </LinearLayout>
-
-    <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New ToggleButton"
-        android:id="@+id/toggleButton7"
-        android:layout_gravity="center_vertical" />
+        >
+    <TextView android:text="WhiskeySour"
+        android:id="@+id/drink_listing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        />
+    <ImageView
+        android:layout_width="280dp"
+        android:layout_height="330dp"
+        android:background="#00000000"
+        android:id="@+id/imageView"
+        android:src="@drawable/whiskeysour"
+        android:layout_marginStart="200dp" />
+
+    </LinearLayout>
 
 </LinearLayout>
 
