--- a/UI_Code/app/src/main/res/layout/activity_new_user.xml
+++ b/UI_Code/app/src/main/res/layout/activity_new_user.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:textColor="@color/white"
-    android:background="@drawable/cityscape"
+    android:background="@drawable/smart_bar_background"
     android:orientation="vertical"
     tools:context="com.example.trider.smartbarui.NewUser"
     android:weightSum="1">
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Welcome, Please Enter Your 11-Digit Phone Number"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:id="@+id/textView4"
         />
@@ -27,8 +27,7 @@
         android:layout_width="400dp"
         android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Buffer:"
-        android:textColor="@color/white"
+        android:text=""
         android:id="@+id/drinkView" />
 
     <ProgressBar
@@ -37,12 +36,8 @@
         android:id="@+id/newUserProgress"
         android:layout_marginLeft="375dp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
     <GridLayout
         android:layout_width="wrap_content"
-        android:layout_marginStart = "150dp"
         android:layout_height="wrap_content">
 
         <Button
@@ -151,16 +146,41 @@
             />
     </GridLayout>
     <TextView
-        android:text="Phone#"
+        android:text=""
         android:layout_width="200dp"
-        android:layout_marginTop="100dp"
         android:textSize="30sp"
         android:layout_height="50dp"
         android:hint="Phone#"
-        android:textColor="@color/white"
-        android:background="@drawable/cust_butt"
         android:id="@+id/enterField" />
-        </LinearLayout>
+
+    <!--
+        <EditText
+            android:id="@+id/txtPin"
+            android:layout_width="300dp"
+            android:layout_marginLeft="300dp"
+            android:layout_height="wrap_content"
+
+            android:hint="Phone Number"
+            android:inputType="phone"
+            android:maxLength="11"
+
+            android:textSize="40sp"
+            android:textColor="@color/white">
+
+        </EditText>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/CityTheme"
+            android:background="@drawable/cust_butt"
+            android:layout_marginLeft="300dp"
+            android:hint="Password"
+            android:text="Enter"
+
+            android:id="@+id/button9"
+            android:onClick="CheckPin"/>
+        -->
 
     <Button
         style="?android:attr/buttonStyleSmall"
