--- a/UI_Code/app/src/main/res/values/styles.xml
+++ b/UI_Code/app/src/main/res/values/styles.xml
@@ -38,18 +38,16 @@
 
 
     <style name= "PinKey">
-        <item name ="android:layout_width">90dp</item>
-        <item name ="android:layout_height">90dp</item>
-        <item name = "android:textColor">#ff000000</item>
-        <item name = "android:layout_margin">5dp</item>
-        <item name ="android:background">@drawable/cust_keypad_butt</item>
+        <item name ="android:layout_width">70dp</item>
+        <item name ="android:layout_height">70dp</item>
+        <item name = "android:background">#8800FF00</item>
 
     </style>
 
 
     <style name="ContainerHighlighted">
-        <item name = "android:layout_width">180dp</item>
-        <item name = "android:layout_height">180dp</item>
+        <item name ="android:layout_width">180dp</item>
+        <item name ="android:layout_height">180dp</item>
         <item name = "android:layout_margin">1dp</item>
         <item name = "android:textColor">@color/black</item>
         <item name = "android:background">@drawable/cont_butt_high</item>
